external-crates/move/crates/move-compiler/tests/move_check/liveness/dead_refs_simple_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[EC07002]: mutable borrow rule violated
  ┌─ tests/move_check/liveness/dead_refs_simple_invalid.move:5:13
  │
4 │         let x_ref = &mut x;
  │                     ------ It is still being mutably borrowed by this reference
5 │         _ = x;
  │             ^ Invalid copy of variable 'x'

error[EC07003]: invalid operation, could create a dangling reference
  ┌─ tests/move_check/liveness/dead_refs_simple_invalid.move:6:13
  │
4 │         let x_ref = &mut x;
  │                     ------ It is still being mutably borrowed by this reference
5 │         _ = x;
6 │         _ = move x;
  │             ^^^^^^ Invalid move of variable 'x'

error[EC07002]: mutable borrow rule violated
   ┌─ tests/move_check/liveness/dead_refs_simple_invalid.move:13:13
   │
12 │         let x_ref = &mut x;
   │                     ------ It is still being mutably borrowed by this reference
13 │         _ = x;
   │             ^ Invalid copy of variable 'x'

error[EC07003]: invalid operation, could create a dangling reference
   ┌─ tests/move_check/liveness/dead_refs_simple_invalid.move:14:13
   │
12 │         let x_ref = &mut x;
   │                     ------ It is still being mutably borrowed by this reference
13 │         _ = x;
14 │         _ = move x;
   │             ^^^^^^ Invalid move of variable 'x'
